# Aegos

./: .gitignore  AGENTS.md  ARCHITECTURE_DEBT_2.9.30.md  ARCHITECTURE_FREEZE_2.9.20_TO_2.9.29.md  CONTROL_PLANE_ACCEPTANCE.md  CONTROL_PLANE_BASELINE.md  CONTROL_PLANE_BOUNDARY_3.6.49.md  CURRENT_MAINLINE_3.5.71_TO_3.6.40.md  DEVELOPMENT_GUARDRAILS.md  DEVELOPMENT_HANDOFF_3.6.35.md  DISTRIBUTION_REVIEW_3.6.36.md  INSTALLER_BASELINE_3.6.35_2026-07-19.md  MIHOMO_INTEGRATION_GOVERNANCE.md  PERFORMANCE_GPU_3.6.32.json  PERFORMANCE_LIMITATION_3.6.46.md  PERFORMANCE_NATIVE_3.6.33.json  PERFORMANCE_PRESSURE_3.6.32.json  PERFORMANCE_PRESSURE_3.6.33.json  PERFORMANCE_PRESSURE_3.6.34.json  PERFORMANCE_PRESSURE_3.6.35.json  PERFORMANCE_REPEAT_3.6.32.json  PERFORMANCE_REPEAT_3.6.33.json  PERFORMANCE_SOAK_3.6.32.json  PERFORMANCE_SOAK_3.6.33.json  PHASE_1_2_ALIGNMENT_3.5.85.md  PRODUCT_MATURITY_3.4.11_TO_3.4.20_DETAILED.md  PRODUCT_MATURITY_GAP_REPORT.md  PRODUCT_MATURITY_RECOVERY_PLAN.md  PRODUCT_SMOKE_3.6.31.json  PRODUCT_SMOKE_3.6.32.json  PRODUCT_SMOKE_3.6.33.json  README.md  RELEASE_0.2.0.md  RELEASE_0.3.0.md  RELEASE_0.4.0.md  RELEASE_0.5.0.md  RELEASE_0.5.1.md  RELEASE_0.5.10.md  RELEASE_0.5.11.md  RELEASE_0.5.2.md  (+354 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_config.rs  config_deployment.rs  config_domain.rs  config_pipeline.rs  core_domain.rs  core_runtime.rs  dataplane.rs  diagnostics_runtime.rs  main.rs  profile_compiler.rs  routing_domain.rs  routing_store.rs  runtime_command.rs  speed_runtime.rs  speed_scheduler.rs  (+5 more)
(+123 files in other folders)
