[package]
name = "aegos"
version = "3.5.24"
description = "Aegos lightweight desktop shell"
authors = ["Codex"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2", features = [] }
base64 = "0.22"
